tests/__snapshots__/api-toBe-stderr.snap.txt
Error: Type '{ a: string; } | { a: string; }' is identical to type '{ a: string; }'.

  18 | 
  19 |   expect<{ a: string } | { a: string }>().type.toBe<{ a: string }>();
  20 |   expect<{ a: string } | { a: string }>().type.not.toBe<{ a: string }>();
     |                                                         ~~~~~~~~~~~~~
  21 | 
  22 |   expect<{ a: string } | { b: string }>().type.not.toBe<{ a: string }>();
  23 |   expect<{ a: string } | { b: string }>().type.toBe<{ a: string }>();

       at ./__typetests__/toBe.tst.ts:20:57 ❭ edge cases

Error: Type '{ a: string; } | { b: string; }' is not identical to type '{ a: string; }'.

  21 | 
  22 |   expect<{ a: string } | { b: string }>().type.not.toBe<{ a: string }>();
  23 |   expect<{ a: string } | { b: string }>().type.toBe<{ a: string }>();
     |                                                     ~~~~~~~~~~~~~
  24 | 
  25 |   expect<{ a: string } & { a: string }>().type.toBe<{ a: string }>();
  26 |   expect<{ a: string } & { a: string }>().type.not.toBe<{ a: string }>();

       at ./__typetests__/toBe.tst.ts:23:53 ❭ edge cases

Error: Type '{ a: string; } & { a: string; }' is identical to type '{ a: string; }'.

  24 | 
  25 |   expect<{ a: string } & { a: string }>().type.toBe<{ a: string }>();
  26 |   expect<{ a: string } & { a: string }>().type.not.toBe<{ a: string }>();
     |                                                         ~~~~~~~~~~~~~
  27 | 
  28 |   expect<{ a: string } & { b: string }>().type.not.toBe<{ a: string }>();
  29 |   expect<{ a: string } & { b: string }>().type.toBe<{ a: string }>();

       at ./__typetests__/toBe.tst.ts:26:57 ❭ edge cases

Error: Type '{ a: string; } & { b: string; }' is not identical to type '{ a: string; }'.

  27 | 
  28 |   expect<{ a: string } & { b: string }>().type.not.toBe<{ a: string }>();
  29 |   expect<{ a: string } & { b: string }>().type.toBe<{ a: string }>();
     |                                                     ~~~~~~~~~~~~~
  30 | 
  31 |   expect(Date).type.toBe<typeof Date>();
  32 | });

       at ./__typetests__/toBe.tst.ts:29:53 ❭ edge cases

Error: Type '{ a?: number | undefined; }' is identical to type '{ a?: number | undefined; }'.

  35 |   // all four assertion pass only when '"exactOptionalPropertyTypes": true' is set
  36 | 
  37 |   expect<{ a?: number }>().type.not.toBe<{ a?: number | undefined }>();
     |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~
  38 |   expect<{ a?: number | undefined }>().type.not.toBe<{ a?: number }>();
  39 | 
  40 |   expect<{ a?: number }>().type.not.toBeAssignableWith<{ a?: number | undefined }>();

       at ./__typetests__/toBe.tst.ts:37:42 ❭ exact optional property types

Error: Type '{ a?: number | undefined; }' is identical to type '{ a?: number | undefined; }'.

  36 | 
  37 |   expect<{ a?: number }>().type.not.toBe<{ a?: number | undefined }>();
  38 |   expect<{ a?: number | undefined }>().type.not.toBe<{ a?: number }>();
     |                                                      ~~~~~~~~~~~~~~
  39 | 
  40 |   expect<{ a?: number }>().type.not.toBeAssignableWith<{ a?: number | undefined }>();
  41 |   expect<{ a?: number | undefined }>().type.not.toBeAssignableTo<{ a?: number }>();

       at ./__typetests__/toBe.tst.ts:38:54 ❭ exact optional property types

Error: Type '{ a?: number | undefined; }' is assignable with type '{ a?: number | undefined; }'.

  38 |   expect<{ a?: number | undefined }>().type.not.toBe<{ a?: number }>();
  39 | 
  40 |   expect<{ a?: number }>().type.not.toBeAssignableWith<{ a?: number | undefined }>();
     |                                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
  41 |   expect<{ a?: number | undefined }>().type.not.toBeAssignableTo<{ a?: number }>();
  42 | });
  43 | 

       at ./__typetests__/toBe.tst.ts:40:56 ❭ exact optional property types

Error: Type '{ a?: number | undefined; }' is assignable to type '{ a?: number | undefined; }'.

  39 | 
  40 |   expect<{ a?: number }>().type.not.toBeAssignableWith<{ a?: number | undefined }>();
  41 |   expect<{ a?: number | undefined }>().type.not.toBeAssignableTo<{ a?: number }>();
     |                                                                  ~~~~~~~~~~~~~~
  42 | });
  43 | 
  44 | describe("source type", () => {

       at ./__typetests__/toBe.tst.ts:41:66 ❭ exact optional property types

Error: Type 'Names' is not identical to type '{ first: string; last: string; }'.

  47 |     expect<Names>().type.toBe<{ first: string; last?: string }>();
  48 | 
  49 |     expect<Names>().type.toBe<{ first: string; last: string }>();
     |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  50 |   });
  51 | 
  52 |   test("is NOT identical to target type", () => {

       at ./__typetests__/toBe.tst.ts:49:31 ❭ source type ❭ is identical to target type

Error: Type 'Names' is identical to type '{ first: string; last?: string | undefined; }'.

  53 |     expect<Names>().type.not.toBe<{ first: string; last: string }>();
  54 | 
  55 |     expect<Names>().type.not.toBe<{ first: string; last?: string }>();
     |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  56 |   });
  57 | 
  58 |   test("is identical to target expression", () => {

       at ./__typetests__/toBe.tst.ts:55:35 ❭ source type ❭ is NOT identical to target type

Error: Type '{ first: string; last: string; }' is not identical to type 'Names'.

  60 |     expect<{ first: string; last?: string }>().type.toBe(getNames());
  61 | 
  62 |     expect<{ first: string; last: string }>().type.toBe(getNames());
     |                                                         ~~~~~~~~~~
  63 |   });
  64 | 
  65 |   test("is NOT identical to target expression", () => {

       at ./__typetests__/toBe.tst.ts:62:57 ❭ source type ❭ is identical to target expression

Error: Type '{ first: string; last?: string | undefined; }' is identical to type 'Names'.

  66 |     expect<{ first: string; last: string }>().type.not.toBe(getNames());
  67 | 
  68 |     expect<{ first: string; last?: string }>().type.not.toBe(getNames());
     |                                                              ~~~~~~~~~~
  69 |   });
  70 | });
  71 | 

       at ./__typetests__/toBe.tst.ts:68:62 ❭ source type ❭ is NOT identical to target expression

Error: Type 'Names' is not identical to type '{ first: string; last: string; }'.

  75 |     expect(getNames()).type.toBe<Names>();
  76 | 
  77 |     expect(getNames()).type.toBe<{ first: string; last: string }>();
     |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  78 |   });
  79 | 
  80 |   test("is NOT identical to target type", () => {

       at ./__typetests__/toBe.tst.ts:77:34 ❭ source expression ❭ identical to target type

Error: Type 'Names' is identical to type '{ first: string; last?: string | undefined; }'.

  81 |     expect(getNames()).type.not.toBe<{ first: string; last: string }>();
  82 | 
  83 |     expect(getNames()).type.not.toBe<{ first: string; last?: string }>();
     |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  84 |   });
  85 | 
  86 |   test("identical to target expression", () => {

       at ./__typetests__/toBe.tst.ts:83:38 ❭ source expression ❭ is NOT identical to target type

Error: Type '{ height: number; }' is not identical to type 'Size'.

  87 |     expect({ height: 14, width: 25 }).type.toBe(getSize());
  88 | 
  89 |     expect({ height: 14 }).type.toBe(getSize());
     |                                      ~~~~~~~~~
  90 |   });
  91 | 
  92 |   test("is NOT identical to target expression", () => {

       at ./__typetests__/toBe.tst.ts:89:38 ❭ source expression ❭ identical to target expression

Error: Type '{ height: number; width: number; }' is identical to type 'Size'.

  93 |     expect({ height: 14 }).type.not.toBe(getSize());
  94 | 
  95 |     expect({ height: 14, width: 25 }).type.not.toBe(getSize());
     |                                                     ~~~~~~~~~
  96 |   });
  97 | });
  98 | 

       at ./__typetests__/toBe.tst.ts:95:53 ❭ source expression ❭ is NOT identical to target expression

